- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    6.5.1
- 
    macOS 13.3.1 (M1), XCode 14.3, iOS Simulator 16.4
- 
        
- 
        46d69b6ca (dev), ffe74b562 (6.5), ec3929789 (6.6)
Code
import QtQuick import QtQuick.Controls Window { visible: true Column { spacing: 10 Button { text: "Click Me" onClicked: console.log("clicked") } TextEdit { readOnly: true text: "Stealer" } } }
Steps to reproduce
- Build and run the code above for the iOS Simulator
- Click the button 3 times
- Click on the TextEdit
- Click the button 3 times
- Repeat Steps #3 and #4 a few times
Outcomes
- After Step #2, we see "clicked" printed 3 times in the debug output (Expected)
- After Step #4, we see "clicked" printed only 1 time in the debug output (Not expected)
After the TextEdit receives focus, the Button responds to 1 more click and then goes silent. Clicking on the TextEdit again brings the Button back to life for 1 more click.
- relates to
- 
                    QTBUG-117048 iOS: TextFields "context menu" stops TapHandler from working properly -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-114416 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 486259,2 | iOS: Tear down all text interaction recognizers on focus object change | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 486677,2 | iOS: Tear down all text interaction recognizers on focus object change | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 486678,2 | iOS: Tear down all text interaction recognizers on focus object change | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |